--- a/environment/sample_app/app/views/static_pages/help.html.erb
+++ b/environment/sample_app/app/views/static_pages/help.html.erb
@@ -1,8 +1,18 @@
-<h1>Help</h1>
-<p>
-  Get help on the Ruby on Rails Tutorial at the
-  <a href="https://railstutorial.jp/help">Rails Tutorial Help page</a>.
-  To get help on this sample app, see the
-  <a href="https://railstutorial.jp/#ebook"><em>Ruby on Rails Tutorial</em>
-  book</a>.
-</p>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Help | Ruby on Rails Tutorial Sample App</title>
+</head>
+  <body>
+    <h1>Help</h1>
+      <p>
+        Get help on the Ruby on Rails Tutorial at the
+        <a href="https://railstutorial.jp/help">Rails Tutorial Help page</a>.
+        To get help on this sample app, see the
+        <a href="https://railstutorial.jp/#ebook"><em>Ruby on Rails Tutorial</em>
+        book</a>.
+      </p>
+  </body>
+</html>
