--- a/environment/sample_app/app/views/static_pages/home.html.erb
+++ b/environment/sample_app/app/views/static_pages/home.html.erb
@@ -1,6 +1,16 @@
-<h1>Sample App</h1>
-<p>
-  This is the home page for the
-  <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
-  sample application.
-</p>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home | Ruby on Rails Tutorial Sample App</title>
+</head>
+  <body>
+    <h1>Sample App</h1>
+      <p>
+        This is the home page for the
+        <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
+        sample application.
+      </p>
+  </body>
+</html>
